@@ -2,7 +2,7 @@ ChangeLog
 distfiles
 LICENSE
 Makefile
-README
+README.txt
 ToDo
 FixedPoint.py
 demo.py
